<resources>
    <string name="app_name">MUu</string>
    <string name="tela_login_senha">Senha</string>
    <string name="tela_login_nome">Nome</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="entrar">ENTRAR</string>
    <string name="abrir_opcoes_de_fazenda">Abrir Opções de Fazenda</string>
    <string name="abrir_opcoes_de_manejo">Abrir Opções de Manejo</string>
    <string name="abrir_opcoes_de_rebanho">Abrir Opções de Rebanho</string>
    <string name="realizar_cronograma">Realizar Cronograma</string>
    <string name="sair">Sair</string>
    <string name="botao_sair">Botçao Sair</string>
    <string name="botao_cronograma">Botão Cronograma</string>
    <string name="botao_animais">Botão Animais</string>
    <string name="botao_rebanho">Botão Rebanho</string>
    <string name="botao_manejo">Botão Manejo</string>
    <string name="botao_fazenda">Botão Fazenda</string>
    <string name="botao_adicionar_fazenda">Botão Adicionar Fazenda</string>
    <string name="botao_adicionar_rebanho">Botão Adicionar Rebanho</string>
    <string name="botao_adicionar_manejo">Botão Adicionar Manejo</string>
    <string name="botao_adicionar_animal">Botão Adicionar Animal</string>
    <string name="botao_adicionar_tarefa">Botão Adicionar Tarefa</string>
    <string name="criar_conta">Criar conta</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="confirme_sua_senha">Confirme sua senha</string>
    <string name="confirmacao_da_senha">Confirmação da senha</string>
    <string name="menssagem_de_erro_campos_iguais">Os campos precisam ser iguais!</string>
    <string name="menssagem_de_erro_tamanho_senha">A senha deve ter no mínimo 5 caracteres</string>
    <string name="menssagem_de_erro_campo_obrigatorio">Campo Obrigatório!</string>
    <string name="id">ID:</string>
    <string name="nome">Nome:</string>
    <string name="endereco">Endereço:</string>
    <string name="tamanho">Tamanho:</string>
    <string name="digite_o_tamano_da_fazenda">Digite o tamano da fazenda (alq)</string>
    <string name="digite_o_endereco_da_fazenda">Digite o endereço da fazenda</string>
    <string name="digite_o_nome_da_fazenda">Digite o nome da fazenda</string>
    <string name="nome_fazenda_1">Fazenda Boi Manso</string>
    <string name="nome_fazenda_2">Fazenda Olhos D\'Água</string>
    <string name="nome_fazenda_3">Fazenda Rio Claro</string>
    <string name="nome_fazenda_4">Fazenda Boi Bufa</string>
    <string name="endereco_fazenda_1">– Rod. João Tavares da Silva, 1 - Centro, Bela Vista do Paraíso - PR, 86130-000</string>
    <string name="endereco_fazenda_2">– Rod. João Tavares da Silva, 2 – Centro, Bela Vista do Paraíso – PR, 86130-000</string>
    <string name="endereco_fazenda_3">- Rod. João Tavares da Silva, 3 - Centro, Bela Vista do Paraíso - PR, 86130-000</string>
    <string name="endereco_fazenda_4">- Rod. João Tavares da Silva, 4 - Centro, Bela Vista do Paraíso - PR, 86130-000</string>
    <string name="tamanho_fazenda_1">45 alq</string>
    <string name="tamanho_fazenda_2">53 alq</string>
    <string name="tamanho_fazenda_3">62 alq</string>
    <string name="tamanho_fazenda_4">100 alq</string>
    <string name="digite_o_id_da_fazenda">Digite o ID da fazenda</string>
    <string name="id_fazenda">Id Fazenda:</string>
    <string name="quantidade_animais">Quantidade Animais:</string>
    <string name="nome_rebanho">Nome Rebanho:</string>
    <string name="tipo_rebanho">Tipo Rebanho:</string>
    <string name="digite_o_tamanho_do_rebanho">Digite o tamanho do rebanho</string>
    <string name="digite_o_nome_do_rebanho">Digite o nome do rebanho</string>
    <string name="digite_o_tipo_do_rebanho">Digite o tipo do rebanho</string>
    <string name="id_rebanho">Id Rebanho:</string>
    <string name="data_ultima_alimentacao">Data ultima alimentação</string>
    <string name="data_ultima_vacinacao">Data ultima vacinação:</string>
    <string name="distancia_percorrida_dia">Distancia percorrida (dia):</string>
    <string name="data_alimentacao_1">18/11/2021 10:53</string>
    <string name="data_vacinacao_1">01/09/2021 07:39</string>
    <string name="distancia_1">10km</string>
    <string name="data_alimentacao_2">18/11/2021 11:53</string>
    <string name="data_vacinacao_2">11/05/2021 09:00</string>
    <string name="distancia_2">4km</string>
    <string name="digite_a_distancia_percorrida_km">Digite a distancia percorrida (km)</string>
    <string name="digite_a_data_da_ultima_vacina">Digite a data da ultima vacina</string>
    <string name="digite_a_data_da_ultima_alimentacao">Digite a data da ultima alimentação</string>
    <string name="digite_o_id_do_rebanho">Digite o ID do rebanho</string>
    <string name="t_a_r_e_f_a_s">T A R E F A S</string>
    <string name="_7_30_alimentar_os_bois">7:30 - Alimentar os Bois</string>
    <string name="_8_00_alimentar_as_ovelhas">8:00 - Alimentar as ovelhas</string>
    <string name="_10_00_soltar_os_bois_para_andar">10:00 - Soltar os bois para andar</string>
    <string name="_10_30_limpar_o_est_bulo_dos_bois">10:30 - Limpar o Estábulo dos bois</string>
    <string name="_11_00_recolher_os_bois">11:00 - Recolher os bois</string>
    <string name="_11_30_soltar_as_ovelhas_para_andar">11:30 - Soltar as ovelhas para andar</string>
    <string name="_12_00_limpar_o_est_bulo_das_ovelhas">12:00 - Limpar o Estábulo das ovelhas</string>
    <string name="_12_30_guardar_as_ovelhas">12:30 - Guardar as ovelhas</string>
    <string name="_13_00_almo_ar">13:00 - Almoçar</string>
    <string name="_15_00_fazer_contabilidade_da_fazenda">15:00 - Fazer contabilidade da fazenda</string>
    <string name="_16_00_fazer_pedido_do_que_esta_faltando">16:00 - Fazer pedido do que esta faltando</string>
    <string name="_17_00_ir_ao_mercado">17:00 - Ir ao mercado</string>
    <string name="_18_00_trancar_tudo">18:00 - Trancar tudo</string>
    <string name="digite_a_atividade_a_ser_feita">Digite a atividade a ser feita</string>
    <string name="digite_a_hora_para_cumprir_a_atividade">Digite a hora para cumprir a atividade</string>
    <string name="hora">Hora:</string>
    <string name="atividade">Atividade:</string>
    <string name="abrir_opcoes_animais">Abrir Opções de Animais</string>
    <string name="nome_do_animal">Nome do animal:</string>
    <string name="tipo_do_animal">Tipo do animal:</string>
    <string name="peso_do_animal">Peso do animal:</string>
    <string name="data_de_nascimento_do_animal">Data de nascimento do animal:</string>
    <string name="rebanho_que_o_animal_esta">Rebanho que o animal esta:</string>
    <string name="ultima_vacina_do_animal">Ultima vacina do animal:</string>
    <string name="touro_bandido">Touro Bandido</string>
    <string name="bovino">Bovino</string>
    <string name="peso">250KG</string>
    <string name="data_nascimento_1">16/10/2018</string>
    <string name="bois_mansos">Bois Mansos</string>
    <string name="vacina_1">B19</string>
    <string name="vacina_2">Clostridioses</string>
    <string name="shawn_o_carneiro">Shawn O Carneiro</string>
    <string name="data_nascimento_2">20/08/2015</string>
    <string name="peso_2">90KG</string>
    <string name="ovinos">Ovinos</string>
    <string name="shawn">Shawn</string>
    <string name="digite_o_nome_do_animal">Digite o nome do animal</string>
    <string name="digite_o_tipo_do_animal">Digite o tipo do animal</string>
    <string name="digite_o_peso_do_animal_kg">Digite o peso do animal(kg)</string>
    <string name="digite_a_data_de_nascimento_do_animal">Digite a data de nascimento do animal</string>
    <string name="digite_o_rebanho_que_o_animal_esta">Digite o rebanho que o animal esta</string>
    <string name="digite_a_ultima_vacina_que_o_animal_tomou">Digite a ultima vacina que o animal tomou</string>
</resources>