<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@drawable/shape_branco"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="40dp"
        android:paddingEnd="20dp"
        android:paddingBottom="40dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tela_criar_animal_nome_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nome_do_animal"
                    android:textColor="#0DB666"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/tela_criar_animal_nome_campo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape"
                    android:hint="@string/digite_o_nome_do_animal"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/tela_criar_animal_tipo_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo_do_animal"
                    android:textColor="#0DB666"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/tela_criar_animal_tipo_campo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape"
                    android:hint="@string/digite_o_tipo_do_animal"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/tela_criar_animal_peso_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/peso_do_animal"
                    android:textColor="#0DB666"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/tela_criar_animal_peso_campo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:inputType="number"
                    android:background="@drawable/shape"
                    android:hint="@string/digite_o_peso_do_animal_kg"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/tela_criar_animal_data_nascimento_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_de_nascimento_do_animal"
                    android:textColor="#0DB666"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/tela_criar_animal_data_nascimento_campo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape"
                    android:hint="@string/digite_a_data_de_nascimento_do_animal"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/tela_criar_animal_rebanho_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rebanho_que_o_animal_esta"
                    android:textColor="#0DB666"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/tela_criar_animal_rebanho_campo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape"
                    android:hint="@string/digite_o_rebanho_que_o_animal_esta"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/tela_criar_animal_ultima_vacina_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ultima_vacina_do_animal"
                    android:textColor="#0DB666"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/tela_criar_animal_ultima_vacina_campo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape"
                    android:hint="@string/digite_a_ultima_vacina_que_o_animal_tomou"
                    android:padding="5dp" />

                <Button
                    android:id="@+id/tela_criar_animal_botao_cadastra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape"
                    android:text="@string/cadastrar"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>