<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@drawable/shape_branco"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="40dp"
        android:paddingEnd="20dp"
        android:paddingBottom="40dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@mipmap/ic_logo" />

        <TextView
            android:id="@+id/tela_criar_conta_nome_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0DB666"
            android:text="@string/tela_login_nome"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tela_criar_conta_campo_nome"
            android:layout_width="match_parent"
            android:background="@drawable/shape"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:hint="@string/digite_seu_nome"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tela_criar_conta_senha_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0DB666"
            android:text="@string/tela_login_senha"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tela_criar_conta_campo_senha"
            android:layout_width="match_parent"
            android:background="@drawable/shape"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:hint="@string/digite_sua_senha"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tela_criar_conta_corfirmacao_senha_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0DB666"
            android:text="@string/confirmacao_da_senha"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tela_criar_conta_corfirmacao_campo_senha"
            android:layout_width="match_parent"
            android:background="@drawable/shape"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:hint="@string/confirme_sua_senha"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/tela_criar_conta_botao_cadastra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape"
            android:text="@string/cadastrar" />
    </LinearLayout>

</LinearLayout>